Bug 1578330 - Call GetBufferSize after BeginFrame because RenderCompositorANGLE mutates it in BeginFrame. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D45143